test/interaction/Issue1353.out
(agda2-status-action "")
(agda2-info-action "*Type-checking*" "" nil)
(agda2-highlight-clear)
(agda2-verbose "Found interaction point ConcreteDef ?0 : (Pow I) ")
(agda2-status-action "ShowImplicit")
(agda2-info-action "*All Goals, Errors*" "?0 : Pow I _X_241 : I → Set [ at Issue1353.agda:89.60-65 ] ———— Error ————————————————————————————————————————————————— error: [UnsolvedConstraints] Failed to solve the following constraints: X (Ω .input {i} p a) =< _X_241 (Ω .input {i} p a) (blocked on _X_241) _X_241 (Ψ .input {i} p₁ a) =< X (Ψ .input {i} p₁ a) (blocked on _X_241)" nil)
((last . 1) . (agda2-goals-action '(0)))
(agda2-give-action 0 "X")
(agda2-status-action "ShowImplicit")
(agda2-info-action "*All Done*" "" nil)
((last . 1) . (agda2-goals-action '()))
